@@ -27,6 +27,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #10924: Adding salt and Modular Crypt Format to crypt library.
+  Moved old C wrapper to _crypt, and added a Python wrapper with
+  enhanced salt generation and simpler API for password generation.
+
 - Issue #11074: Make 'tokenize' so it can be reloaded.
 
 - Issue #11085: Moved collections abstract base classes into a separate
